Made some big changes to the NetworkService to enable the passing around of network neighbors. The NetworkService creates a new channel for sending neighbor information. Now clients can subscribe to this channel for their own local protocols. Added new lang structures to enable this functionality. Added new Kernel id value.
git-svn-id: https://svn.ece.gatech.edu/repos/gritslab/cps/trunk@619 01617cb1-71e7-4244-8ca6-8ab856e43c5d