@@ -10,27 +10,33 @@ import java.net.UnknownHostException;
 import java.util.ArrayList;
 import java.util.Date;
 import java.util.StringTokenizer;
-//import edu.gatech.grits.pancakes.log.Syslogp;
-import edu.gatech.grits.pancakes.lang.NetworkNeighbor;
+
+import javolution.util.FastList;
+import javolution.util.FastMap;
+import edu.gatech.grits.pancakes.core.*;
+import edu.gatech.grits.pancakes.lang.*;
 import edu.gatech.grits.pancakes.service.NetworkService;
 
-public class DiscoveryListener {
-	
+public class DiscoveryListener extends Task {
+
 	private final String MCAST_ADDR = "224.224.224.224";
 	private final int DEST_PORT = 1337;
 	private final int BUFFER_LENGTH = 19;
 	private MulticastSocket socket;
-	private volatile boolean isRunning;	
-	private Thread mainThread;
-	
+	private boolean isRunning = false;
+	Thread mainThread;
+
+	private final long TIMEOUT = 10000; // 10s
+	private FastMap<String, NetworkNeighbor> neighbors = new FastMap<String, NetworkNeighbor>(10);
+
 	public DiscoveryListener() {
+		setDelay(0l);
 		try {
 			socket = new MulticastSocket(DEST_PORT);
 		} catch (IOException e) {
-			//Syslogp.ref(this).fatal("Unable to create multicast socket.");
 			System.exit(-1);
 		} // must bind receive side
-		
+
 		try {
 			socket.joinGroup(InetAddress.getByName(MCAST_ADDR));
 		} catch (UnknownHostException e) {
@@ -40,56 +46,88 @@ public class DiscoveryListener {
 			//Syslogp.ref(this).fatal("Unable to join multicast group.");
 			System.exit(-1);
 		}
-		
+
 		isRunning = true;
-		
+
 		Runnable task = new Runnable() {
 			public void run() {
 				byte[] b = new byte[BUFFER_LENGTH];
 				DatagramPacket dgram = new DatagramPacket(b, b.length);
-				
+
 				while(isRunning) {
 					try {
 						socket.receive(dgram);
 						addNetworkNeighbor(dgram);
-					
+
+						Date d = new Date(System.currentTimeMillis()-TIMEOUT);
+
+						FastList<String> expired;
+
+						synchronized(this) {
+							expired = new FastList<String>(neighbors.size());
+						}
+
+						for(String key : neighbors.keySet()) {
+							NetworkNeighbor n;
+
+							synchronized(this) {
+								n = neighbors.get(key);
+							}
+
+							if(n.getTimestamp().before(d)) {
+								expired.add(key);
+							}
+						}
+
+						for(String key : expired) {
+							Kernel.syslog.debug("Remove expired neighbor " + key);
+							NetworkNeighbor expiredNeighbor;
+							expiredNeighbor = neighbors.remove(key);
+							NeighborUpdatePacket np = new NeighborUpdatePacket(new Boolean(true), expiredNeighbor);
+							publish(NetworkService.NEIGHBORHOOD, np);
+						}
 					} catch (IOException e) {
 						System.err.println("Unable to receive datagram or interrupted.");
 						return;
 					}
-					
-//					System.err.println("Received " + dgram.getLength() +
-//							" bytes from " + dgram.getAddress());
-//							dgram.setLength(b.length); // must reset length field!
 				}
 			}
 		};
-		
+
 		mainThread = new Thread(task);
 		mainThread.start();
-		
+
 	}
-	
+
 	public void close() {
+		unsubscribe();
 		isRunning = false;
 		socket.close();
 	}
-	
-	private void addNetworkNeighbor(DatagramPacket dgram) {
+
+	public void run() {
+		// empty.
+	}
+
+	private final void addNetworkNeighbor(DatagramPacket dgram) {
 		ArrayList<String> p = parse(dgram.getData());
-		
-		//System.out.println("Length: " + p.size());
-		
 		if(p != null) {
-			NetworkNeighbor n = new NetworkNeighbor(p.get(1), p.get(0), Integer.valueOf(p.get(2)), new Date(System.currentTimeMillis()));
-			NetworkService.neighborhood.addNeighbor(p.get(1), n);
+			if(!neighbors.containsKey(p.get(1))){
+				Kernel.syslog.debug("Adding neighbor: " + p);
+				NetworkNeighbor n = new NetworkNeighbor(p.get(1), p.get(0), Integer.valueOf(p.get(2)), new Date(System.currentTimeMillis()));
+				neighbors.put(p.get(1), n);
+				publish(NetworkService.NEIGHBORHOOD, new NeighborUpdatePacket(new Boolean(false), n));
+			}
+			else{
+				neighbors.get(p.get(1)).setTimestamp(new Date(System.currentTimeMillis()));
+			}
 		}
 		return;
 	}
-	
+
 	private final ArrayList<String> parse(byte[] data) {
 		ArrayList<String> parameters = new ArrayList<String>(3);
-		
+
 		try {
 			String message = new String(data, "US-ASCII");
 			//System.out.println("Message :" + message);
@@ -97,13 +135,13 @@ public class DiscoveryListener {
 			while(st.hasMoreTokens()) {
 				parameters.add(st.nextToken().trim());
 			}
-			
+
 		} catch (UnsupportedEncodingException e) {
 			//Syslogp.ref(this).error("Message was incorrectly encoded.");
 			parameters = null;
 		}
-		
+
 		return parameters;
 	}
-	
+
 }
